[package]
name = "aoc-2022-rust"
version = "0.1.0"
edition = "2021"

# [profile.release]
# debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc_lib"
path = "src/lib.rs"

[dependencies]
eval = "0.4.3"
fxhash = "0.2.1"
itertools = "0.11.0"
lazy_static = "1.4.0"
regex = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
substring = "1.4.5"
